# PD-Controller-With-Gravity-Compensation

./: CMakeLists.txt  README.md  package.xml
cfg/: pd_w_g.cfg
config/: crustcrawler_effort.yaml  crustcrawler_position.yaml  crustcrawler_trajectory.yaml  crustcrawler_trajectory_small.yaml  crustcrawler_velocity.yaml
include/pd_w_g/: README.md  pd_controller_w_gravity_and_dynamic_reconfigure.h  pd_w_gConfig.h
launch/: README.md  control.launch  crustcrawler.perspective  crustcrawler_abs_next_last.perspective  crustcrawler_j56_testing.perspective  crustcrawler_next_last.perspective  crustcrawler_not_bad.perspective  crustcrawler_ony_missing_j5_cmd.perspective  pd_w_g.launch
src/: README.md  pd_controller_w_gravity.cpp  pd_controller_w_gravity_and_dynamic_reconfigure.cpp  setpoint_node.cpp
